Fikset mye på content_list og jobs-templates

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -6,7 +6,7 @@
         <meta name="copyright" content="WebKom" />
         <meta name="author" content="Fredrik Nicolai Krohg" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>{% block title %}Nabla{% endblock title%}</title>
+        <title>Nabla: {% block title %}Linjeforeningen for Fysikk og Matematikk-studiet på NTNU{% endblock title%}</title>
 
         {% block css %}
         <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/main.css" />
