--- a/nablaweb/templates/jobs/jobs_detail.html
+++ b/nablaweb/templates/jobs/jobs_detail.html
@@ -1,9 +1,1 @@
-{% extends "base.html" %}
-
-{% block title %}{{ block.super }}{{ content.headline }}{% endblock %}
-
-{% block content %}
-{% block include %}
-{% include "jobs/jobs_base.html" %}
-{% endblock %}
-{% endblock %}
+{% extends "jobs/jobs_base.html" %}
