--- a/nablaweb/templates/jobs/jobs_list.html
+++ b/nablaweb/templates/jobs/jobs_list.html
@@ -1,32 +1,4 @@
-{% extends "base.html" %}
+{% extends "content/content_list.html" %}
 
 
-{% block title %}{{ block.super }} Innhold{% endblock %}
-
-
-{% block content %}
-
-{% for content in content_list %}
-<p>{{ content.headline }}</p>
-<p><em>{{ content.lead_paragraph }}</em></p>
-<p><a href="{{ content.id }}"/>Les mer</a></p>
-<br />
-{% empty %}
-Tomt.
-{% endfor %}
-
-{% comment %}
-TODO: Fiks språk. page -> side
-{% endcomment %}
-
-{% if is_paginated %}
-{% if page_obj.has_previous %}
-<a href="?page={{ page_obj.previous_page_number }}">nyere</a>
-{% endif %}
-
-{% if page_obj.has_next %}
-<a href="?page={{ page_obj.next_page_number }}">eldre</a>
-{% endif %}
-{% endif %}
-
-{% endblock %}
+{% block title %}stillingsannonser{% endblock %}
