--- a/nablaweb/templates/events/event_list.html
+++ b/nablaweb/templates/events/event_list.html
@@ -1,3 +1,3 @@
 {% extends "content/content_list.html" %}
 
-{% block title %}{{ block.super }} Arrangement{% endblock %}
+{% block title %}{{ block.super }}: Arrangement{% endblock %}
