--- a/nablaweb/templates/content/content_base.html
+++ b/nablaweb/templates/content/content_base.html
@@ -3,6 +3,8 @@
 {% load humanize %}
 {% load classname %}
 
+{% block title %}{{ content.headline }}{% endblock %}
+
 {% block content %}
 
 <h2>{% block headline %}{{ content.headline }}{% endblock %}</h2>
@@ -26,7 +28,7 @@
         {% if content.created_by %}
         href="{% url accounts.views.view_member_profile content.created_by.username %}"
         {% endif %}>
-        {{ event.created_by.get_full_name }}
+        {{ content.created_by.get_full_name }}
     </a>
 </div>
 {% endblock %}
