--- a/nablaweb/templates/content/content_preview.html
+++ b/nablaweb/templates/content/content_preview.html
@@ -7,17 +7,17 @@
 <h1>Preview your submission</h1>
 
 {% block preview_detail %}
-{% include "content/content_base.html" %}
+    {% include "content/content_detail.html" with ajax="True" %}
 {% endblock %}
 
 <p>Security hash: {{ hash_value }}</p>
 
 <form action="" method="post">{% csrf_token %}
-{% for field in form %}{{ field.as_hidden }}
-{% endfor %}
-<input type="hidden" name="{{ stage_field }}" value="2" />
-<input type="hidden" name="{{ hash_field }}" value="{{ hash_value }}" />
-<p><input type="submit" value="Lagre" /></p>
+    {% for field in form %}{{ field.as_hidden }}
+    {% endfor %}
+    <input type="hidden" name="{{ stage_field }}" value="2" />
+    <input type="hidden" name="{{ hash_field }}" value="{{ hash_value }}" />
+    <p><input type="submit" value="Lagre" /></p>
 </form>
 
 <h1>Or edit it again</h1>
