--- a/static/css/right_sidebar.css
+++ b/static/css/right_sidebar.css
@@ -1,6 +1,4 @@
 #userBox {
-/*    margin-left: 50px;
-    margin-top: 20px; */
     margin: 30px 0 0 26px;
     width: 208px;
     padding: 5px;
@@ -9,6 +7,7 @@
     border-radius: 9px;
     -moz-border-radius: 9px;
     -webkit-border-radius: 9px;
+    font-size: 14px;
 }
 
     #userBox a{
@@ -44,6 +43,10 @@
         display: table-cell;
         vertical-align: middle;
         padding-left: 6px;
+    }
+
+    #userBox #userlinks a {
+        line-height:25px;
     }
 
     #userBox #userinfo {
