Fikset bug i profilvisningen. Lagt til meta-meta-tags i templates.

--- a/nablaweb/templates/accounts/view_member_profile.html
+++ b/nablaweb/templates/accounts/view_member_profile.html
@@ -12,7 +12,7 @@
 <br />
 <table>
     <tr>
-      <td rowspan=4 >{% avatar user 100 %}</td>
+      <td rowspan=4 >{% avatar member 100 %}</td>
         <td>Epost: </td>
         <td>{{member.email}}</td>
     </tr>
