--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -32,6 +32,7 @@
 	<div id="head">
 	<div class="centeredContainer">
 
+		<div id="nablaNav">&nbsp;</div>
 		<a style="text-decoration:none;"href="{% url homepage.views.start %}">
 		    <img src="{{ STATIC_URL}}img/nabla.png" />
 		    <h1>Nabla</h1>
