--- a/nablaweb/templates/accounts/login.html
+++ b/nablaweb/templates/accounts/login.html
@@ -6,10 +6,10 @@
 {% block content %}
 
 <form method="post" action="/login/?next={{ next }}" />
-    <ul>
+    <table>
     {% csrf_token %}
-    {{ login_form.as_ul }}
-    </ul>
+    {{ login_form.as_table }}
+    </table>
     <input type="submit" value="Logg inn"/>
     
     </form>
