--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -35,7 +35,7 @@
 		<!-- Trenger en variabel her som viser hvilken hovedside man er under
 		Har i css'en kalt de forskjellige klassene one, two osv. etter rekkefølgen
 	i toppen der nabla-logoen er one	-->
-		<div id="nablaNav" class="{{ category }}one">&nbsp;</div>
+		<div id="nablaNav" class="{{ category }}one"></div>
 		<a style="text-decoration:none;"href="{% url homepage.views.start %}">
 		    <img src="{{ STATIC_URL}}img/nabla.png" />
 		    <h1>Nabla</h1>
