--- a/static/css/right_sidebar.css
+++ b/static/css/right_sidebar.css
@@ -135,6 +135,7 @@
 	border-radius: 3px;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
+	height: 17px;
 }
 
 #body div.right ul.nav li:hover a {
