--- a/nablaweb/templates/jobs/jobs_base.html
+++ b/nablaweb/templates/jobs/jobs_base.html
@@ -1,15 +1,23 @@
 {% extends "content/content_detail.html" %}
 {% load bbcode %}
+{% load jobs_filters %}
+
+{% block headline %}
+{{ content.headline }} ved {{ content.company.headline }}
+{% endblock %}
 
 {% block readmore %}
-    <a href="{% url jobs_detail content.company content.id %}">Les mer og meld deg på her</a>
+    <a href="{% url jobs_detail content.company content.id %}">Les mer</a>
 {% endblock %}
 
 {# over ingress #}
 {% block after_headline %}
-    {% if content.relevant_for %}
-        Denne stillingsannonsen er rettet mot studenter ved {{ content.get_relevant_for_display }}.<br />
+    {% comment %}
+    {% if content.relevant_for_group %}
+        Denne stillingsannonsen er rettet mot studenter ved {% for i in content.relevant_for_group.all %}{{ i.studieretning }}, {% endfor %}.<br />
     {% endif %}
+    {% endcomment %}
+    Denne stillingsannonsen er rettet mot studenter ved {{ content.relevant_for_group.all|commas }}.
 {% endblock %}
 
 
