Fant ut hva som egentlig var problemet med at bakgrunnen i main-content området ikke hang helt sammen. Det var at marginer fra innsiden av innh elementet la til ekstra plass. Fikset dette og tok vekk vår tidligere hack. Nå skal det funke uansett hvor store marginer som er innenfor. Området bare utvider seg automatisk for å fylle plassen.

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -64,7 +64,7 @@
 	<div class="centeredContainer">
 
 		<div id="nesteArrang">
-          <a href="/arrangement/""><h3 class="overskrift">Kommende arrangementer</h3></a>
+          <a href="/arrangement/"><h3 class="overskrift">Kommende arrangementer</h3></a>
 
         {% comment %}
 			<!-- Denne tabellen skal bli generert av django slik at det er
@@ -308,6 +308,7 @@
 					</div>
 					<div class="middleBox">
 
+						<div class="clear">&nbsp;</div>
 						<div class="innh">
 
                             {% block content %}
@@ -328,7 +329,7 @@ Morbi quis mattis sem. Vestibulum eget elit dolor, non venenatis risus. Nulla ri
                             {% endblock content %}
 
 						</div>
-
+						<div class="clear">&nbsp;</div>
 					</div>
 					<div class="footBox">
 					</div>
