--- a/nablaweb/templates/comments/form.html
+++ b/nablaweb/templates/comments/form.html
@@ -5,13 +5,16 @@
     {% if field.is_hidden %}
       <div>{{ field }}</div>
     {% else %}
-      {% if field.errors %}{{ field.errors }}{% endif %}
-      <p
-        {% if field.errors %} class="error"{% endif %}
-        {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
-        {{ field.label_tag }} {{ field }}
-      </p>
-    {% endif %}
+        {# Stygg hack for å fjerne disse feltene #}
+        {% if field.name != "name" and field.name != "email" and field.name != "url" %}
+          {% if field.errors %}{{ field.errors }}{% endif %}
+          <p
+            {% if field.errors %} class="error"{% endif %}
+            {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
+            {{ field.label_tag }} {{ field }}
+          </p>
+          {% endif %}
+        {% endif %}
   {% endfor %}
   <p class="submit">
     <input type="submit" name="post" class="submit-post" value="{% trans "Post" %}" />
