--- a/static/css/main.css
+++ b/static/css/main.css
@@ -111,3 +111,61 @@ div {
 	margin: 0;
 	padding: 0;
 }
+
+/* Kommentarer */
+
+.comment {
+    width: 100%;
+    padding-bottom: 20px;
+}
+
+    .comment .avatar {
+        display: table-cell;
+        width: 15%;
+        vertical-align: top;
+    }
+
+        .comment .avatar img {
+            border-radius: 5px;
+        }
+    
+    .comment .bubble_container {
+        display: table-cell;
+        vertical-align: top;
+    }
+
+        .comment .bubble_container .bubble_arrow {
+            background-image: url(../img/comment_arrow.png);
+            background-repeat: no-repeat;
+            background-position: 0 10px;
+            display: table-cell;
+            width: 20px;
+        }
+
+        .comment .bubble_container .bubble {
+            display: table-cell;
+            background-color: white;
+            border-radius: 15px;
+            padding: 10px;
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
