--- a/nablaweb/templates/comments/form.html
+++ b/nablaweb/templates/comments/form.html
@@ -1,23 +1,42 @@
 {% load comments i18n %}
-<form action="{% comment_form_target %}" method="post">{% csrf_token %}
-  {% if next %}<div><input type="hidden" name="next" value="{{ next }}" /></div>{% endif %}
-  {% for field in form %}
-    {% if field.is_hidden %}
-      <div>{{ field }}</div>
-    {% else %}
-        {# Stygg hack for å fjerne disse feltene #}
-        {% if field.name != "name" and field.name != "email" and field.name != "url" %}
-          {% if field.errors %}{{ field.errors }}{% endif %}
-          <p
-            {% if field.errors %} class="error"{% endif %}
-            {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
-            {{ field.label_tag }} {{ field }}
-          </p>
-          {% endif %}
-        {% endif %}
-  {% endfor %}
-  <p class="submit">
-    <input type="submit" name="post" class="submit-post" value="{% trans "Post" %}" />
-    <input type="submit" name="preview" class="submit-preview" value="{% trans "Preview" %}" />
-  </p>
-</form>
+{% load avatar_tags %}
+
+<div class="comment" id="c{{ comment.id }}">
+    <div class="avatar">
+        {% avatar user.username 60 %}
+    </div>
+
+    <div class="bubble_container">
+
+    <form action="{% comment_form_target %}" method="post">{% csrf_token %}
+
+        <div class="bubble_arrow"></div>
+        <div class="bubble">
+
+            {% if next %}<div><input type="hidden" name="next" value="{{ next }}" /></div>{% endif %}
+            {% for field in form %}
+                {% if field.is_hidden %}
+                    <div>{{ field }}</div>
+                {% else %}
+                {# Stygg hack for å fjerne disse feltene #}
+                {% if field.name != "name" and field.name != "email" and field.name != "url" %}
+                    {% if field.errors %}{{ field.errors }}{% endif %}
+                        <p
+                            {% if field.errors %} class="error"{% endif %}
+                            {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
+                            {{ field }}
+                        </p>
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+
+            <p class="submit">
+                <input type="submit" name="post" class="submit-post" value="Legg til kommentar" />
+                <input type="submit" name="preview" class="submit-preview" value="{% trans "Preview" %}" />
+            </p>
+            </div>
+        </div>
+
+    </form>
+
+</div>
