--- a/nablaweb/templates/bedpres/bedpres_form_base.html
+++ b/nablaweb/templates/bedpres/bedpres_form_base.html
@@ -1,1 +1,13 @@
 {% extends "events/event_form_base.html" %}
+
+{% block form_fields %}
+<fieldset>
+  <legend>BPC</legend>
+  <div class="field">
+    {{ form.bpcid.errors }}
+    <label for="id_bpcid">BPC-id:</label>
+    {{ form.bpcid }}
+  </div>
+</fieldset>
+{{ block.super }}
+{% endblock %}
