Fikset bug i event_confirm_delete.html
base_site.html ble inkludert i previewen. Ved å sette ajax="True" i
includen inkluderes ajax.html istedenfor.

--- a/nablaweb/templates/bedpres/bedpres_confirm_delete.html
+++ b/nablaweb/templates/bedpres/bedpres_confirm_delete.html
@@ -1,5 +1,5 @@
 {% extends "events/event_confirm_delete.html" %}
 
 {% block include %}
-{% include "bedpres/bedpres_base.html" %}
+    {% include "bedpres/bedpres_base.html" with ajax="True" %}
 {% endblock %}
