--- a/nablaweb/templates/content/content_confirm_delete.html
+++ b/nablaweb/templates/content/content_confirm_delete.html
@@ -8,6 +8,6 @@ Bekreft sletting.<br />
 <input type="submit" value="Slett">
 </form>
 {% block include %}
-{% include "content/content_base.html" %}
+{% include "content/content_base.html" with ajax="True" %}
 {% endblock %}
 {% endblock %}
