Lagt til mediagenerator og fikset på globalsettings.
For å installere mediagenerator, sjekk
dependencies/-mappen eller globalsettings-apps.
Husk å bruke from globalsettings import * i din settings.

--- a/nablaweb/templates/events/event_form_base.html
+++ b/nablaweb/templates/events/event_form_base.html
@@ -27,7 +27,7 @@
 $(function() {
     // Velger dato-feltene
     $.datepicker.setDefaults($.datepicker.regional['no']);
-    $('.datetime input[name$="0"]').datepicker($.datepicker.regional[ "no" ]);
+    $('.datepicker input[name$="0"]').datepicker({ firstDay: 1, dateFormat: "DD, d MM, yy" });
 });
 
 </script>
