--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -1,4 +1,5 @@
 {% load avatar_tags %}
+{% load media %}
 
 <!DOCTYPE HTML>
 <html>
@@ -9,22 +10,11 @@
         <title>Nabla: {% block title %}Linjeforeningen for Fysikk og Matematikk-studiet på NTNU{% endblock title%}</title>
 
         {% block css %}
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/main.css" />
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/top_menu.css" />
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/login_table.css" />
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/arr_oversikt.css" />
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/kalender.css" />
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/organisering.css" />
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/artikler.css" />
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/right_sidebar.css" />
-        <link type="text/css" href="{{ STATIC_URL }}css/redmond/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />	
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/search.css" />
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/info.css" />
+        {% include_media "all.css" %}
         {% endblock css %}
 
         {% block js %}
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.6.2.min.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.8.16.custom.min.js"></script>
+        {% include_media "all.js" %}
         {% endblock js %}
     </head>
 
